Gnome: Fix unreadable text in calendar events

--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -5564,6 +5564,16 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   border: 0;
   background-color: #eee; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label {
+  color: #1e1f29;
+  opacity: 1; }
+.week-view .color-light.timed label, .color-light label, .year-view .color-light:not(.timed) label {
+  color: #1e1f29;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
